tests/cmd_equate_bad.out
./cmd_equate_bad.svx:5:11: error: Character "=" not allowed in station name (use *SET NAMES to set allowed characters)
 *equate 1 =
           ^
./cmd_equate_bad.svx:6:13: error: Character "=" not allowed in station name (use *SET NAMES to set allowed characters)
 *equate 1 2 =
             ^
./cmd_equate_bad.svx:9:9: error: Only one station in EQUATE command
 *equate foo
         ^~~

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 4 survey stations, joined by 3 legs.
There is 1 loop.
Survey has 2 connected components.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   2 1-nodes.
   2 2-nodes.
There were 0 warning(s) and 3 error(s) - no output files produced.
